--- a/strings.conf
+++ b/strings.conf
@@ -1,6 +1,9 @@
 #Custom System
 !system 1175 Rune Summon
+#Custom Counters
+!counter 0x10fe Squale Counter
 #Custom Archetypes
+!setname 0xfff Binate
 !setname 0xffd Encharnment
 !setname 0xffc Terram
 !setname 0xffb Reguraptor
