Made Card IDs for Squale Consistent

--- a/strings.conf
+++ b/strings.conf
@@ -23,7 +23,7 @@
 !setname 0xfed Theraformation
 !setname 0xfec ???
 !setname 0xfeb ???
-!setname 0xfea ???
+!setname 0xfea Incarntation
 !setname 0xfe9 Transfigure
 !setname 0xfe8 Duplicity
 !setname 0xfe7 net
