Fix Immortal Warlord

--- a/strings.conf
+++ b/strings.conf
@@ -33,6 +33,7 @@
 !setname 0xfe5 ???
 !setname 0xfe4 Charj
 !setname 0xfe3 Runic
+!setname 0x1fe3 Everunic
 !setname 0xfe2 Ritic
 !setname 0xfe1 ???
 !setname 0xfe0 Deprovision
