--- a/strings.conf
+++ b/strings.conf
@@ -29,7 +29,7 @@
 !setname 0xfe7 net
 !setname 0x1fe7 Contaminet
 !setname 0x2fe7 Botnet
-!setname 0xfe6 ???
+!setname 0xfe6 Interlocker
 !setname 0xfe5 ???
 !setname 0xfe4 Charj
 !setname 0xfe3 Runic
