--- a/strings.conf
+++ b/strings.conf
@@ -42,3 +42,6 @@
 !setname 0xfdd Squale
 !setname 0xfdc Celestial Mermaid
 !setname 0xfdb Jittre
+!setname 0xfda IncantLeech
+!setname 0xfd9 Primordial
+!setname 0x1fd9 Primordial Beast
