--- a/strings.conf
+++ b/strings.conf
@@ -43,5 +43,6 @@
 !setname 0xfdc Celestial Mermaid
 !setname 0xfdb Jittre
 !setname 0xfda IncantLeech
-!setname 0xfd9 Primordial
-!setname 0x1fd9 Primordial Beast
+!setname 0xfd9 Ensnared
+!setname 0xfd8 Primordial
+!setname 0x1fd8 Primordial Beast
