Update Insigniate Bugs

--- a/strings.conf
+++ b/strings.conf
@@ -5,6 +5,7 @@
 #Custom Archetypes
 !setname 0xfff Binate
 !setname 0xffd Encharnment
+!setname 0xffe Insigniate
 !setname 0xffc Terram
 !setname 0xffb Reguraptor
 !setname 0xffa Raijuteki
