--- a/strings.conf
+++ b/strings.conf
@@ -39,7 +39,7 @@
 !setname 0xfe1 ???
 !setname 0xfe0 Deprovision
 !setname 0xfdf Piniovistic
-!setname 0xfde ???
+!setname 0xfde Virutali
 !setname 0xfdd Squale
 !setname 0xfdc Celestial Mermaid
 !setname 0xfdb Jittre
