--- a/strings.conf
+++ b/strings.conf
@@ -47,3 +47,5 @@
 !setname 0xfd9 Ensnared
 !setname 0xfd8 Primordial
 !setname 0x1fd8 Primordial Beast
+!setname 0xfd7 Luminereid
+!setname 0xfd6 Salamasprite
