Added Alivia cards

--- a/strings.conf
+++ b/strings.conf
@@ -49,3 +49,6 @@
 !setname 0x1fd8 Primordial Beast
 !setname 0xfd7 Luminereid
 !setname 0xfd6 Salamasprite
+!setname 0xfd5 Subshifter
+!setname 0xfd4 Avilia
+!setname 0xfd3 Ulano
