Added Ulano Subshifter Archetype

--- a/strings.conf
+++ b/strings.conf
@@ -23,7 +23,7 @@
 !setname 0xfee Freezation
 !setname 0xfed Theraformation
 !setname 0xfec ???
-!setname 0xfeb ???
+!setname 0xfeb Cyroglyph
 !setname 0xfea Incarntation
 !setname 0xfe9 Transfigure
 !setname 0xfe8 Duplicity
@@ -52,3 +52,4 @@
 !setname 0xfd5 Subshifter
 !setname 0xfd4 Avilia
 !setname 0xfd3 Ulano
+!setname 0xfd2 Kato
