Update with Fixes to Dynachant and Binate cards

--- a/strings.conf
+++ b/strings.conf
@@ -31,7 +31,7 @@
 !setname 0x1fe7 Contaminet
 !setname 0x2fe7 Botnet
 !setname 0xfe6 Interlocker
-!setname 0xfe5 ???
+!setname 0xfe5 Dynachant
 !setname 0xfe4 Charj
 !setname 0xfe3 Runic
 !setname 0x1fe3 Everunic
