--- a/strings.conf
+++ b/strings.conf
@@ -2,6 +2,7 @@
 !system 1175 Rune Summon
 #Custom Counters
 !counter 0x10fe Squale Counter
+!counter 0x10fd Accumax Counter
 #Custom Archetypes
 !setname 0xfff Binate
 !setname 0xffd Encharnment
@@ -55,3 +56,4 @@
 !setname 0xfd2 Kato
 !setname 0xfd1 Shroudis
 !setname 0xfd0 Toureika
+!setname 0xfcf Catenicorum
