Add Archetypes Strings

--- a/strings.conf
+++ b/strings.conf
@@ -37,7 +37,7 @@
 !setname 0xfe3 Runic
 !setname 0x1fe3 Everunic
 !setname 0xfe2 Ritic
-!setname 0xfe1 ???
+!setname 0xfe1 Etherune
 !setname 0xfe0 Deprovision
 !setname 0xfdf Piniovistic
 !setname 0xfde Virutali
@@ -57,3 +57,4 @@
 !setname 0xfd1 Shroudis
 !setname 0xfd0 Toureika
 !setname 0xfcf Catenicorum
+!setname 0xfce Celsi
