Add new system strings

--- a/strings.conf
+++ b/strings.conf
@@ -1,4 +1,5 @@
 #Custom System
+!system 600 Select the card(s) to use as Rune Material
 !system 1175 Rune Summon
 #Custom Counters
 !counter 0x10fe Squale Counter
