Add Libricon cards

--- a/strings.conf
+++ b/strings.conf
@@ -58,6 +58,7 @@
 !setname 0xfd1 Shroudis
 !setname 0xfd0 Toureika
 !setname 0xfcf Catenicorum
-!setname 0xfcd Tempusloom
 !setname 0xfce Celsi
+!setname 0xfcd Tempusloom
+!setname 0xfcc Libricon
 !setname 0xfca Luminara
