--- a/strings.conf
+++ b/strings.conf
@@ -37,6 +37,7 @@
 !setname 0xfe4 Charj
 !setname 0xfe3 Runic
 !setname 0x1fe3 Everunic
+!setname 0x2fe3 Zerunic
 !setname 0xfe2 Ritic
 !setname 0xfe1 Etherune
 !setname 0xfe0 Deprovision
