--- a/strings.conf
+++ b/strings.conf
@@ -24,7 +24,7 @@
 !setname 0xfef Astagraphy
 !setname 0xfee Freezation
 !setname 0xfed Theraformation
-!setname 0xfec Shroudis
+!setname 0xfec Parafalon
 !setname 0xfeb Cyroglyph
 !setname 0xfea Incarntation
 !setname 0xfe9 Transfigure
