First wave of Zerunic cards (#9)
* Add Sovereign Fang

* Fix Libricon cards

* Fix Libricon bugs

* Add Zerunic Radiance and Zerunic Etherune

* Fix Divine Magus

* Fix Libricon bugs

* Add Zerunic Plantations

* Fix Dynachant cards

* Fix Dynachant cards

* Script Cleanup

* Additional script cleanup

* Add Lustra cards

* Lustra fixes

* Bug fixess

* More bug fixes

* Additional changes

* Fixes

* Modify Lustra cards

* Changes and fixes

* Add Shroudis cards

* Fix set code clash

* Fixing bugs

* Remove debug message

* Shroudis Bug Fixes

* Shroudis Bug Fixes

* Switch Shroudis effects

--- a/strings.conf
+++ b/strings.conf
@@ -24,7 +24,7 @@
 !setname 0xfef Astagraphy
 !setname 0xfee Freezation
 !setname 0xfed Theraformation
-!setname 0xfec ???
+!setname 0xfec Parafalon
 !setname 0xfeb Cyroglyph
 !setname 0xfea Incarntation
 !setname 0xfe9 Transfigure
@@ -37,6 +37,7 @@
 !setname 0xfe4 Charj
 !setname 0xfe3 Runic
 !setname 0x1fe3 Everunic
+!setname 0x2fe3 Zerunic
 !setname 0xfe2 Ritic
 !setname 0xfe1 Etherune
 !setname 0xfe0 Deprovision
@@ -61,4 +62,5 @@
 !setname 0xfce Celsi
 !setname 0xfcd Tempusloom
 !setname 0xfcc Libricon
+!setname 0xfcb ???
 !setname 0xfca Luminara
