Add Nocidium Counter Deck

--- a/strings.conf
+++ b/strings.conf
@@ -4,6 +4,7 @@
 #Custom Counters
 !counter 0x10fe Squale Counter
 !counter 0x10fd Accumax Counter
+!counter 0x10fc Nocidium Counter
 #Custom Archetypes
 !setname 0xfff Binate
 !setname 0xffd Encharnment
