--- a/strings.conf
+++ b/strings.conf
@@ -7,28 +7,28 @@
 !counter 0x10fc Nocidium Counter
 #Custom Archetypes
 !setname 0xfff Binate
-!setname 0xffd Encharnment-TBR
+!setname 0xffd Encharnment # No longer supported, may be removed.
 !setname 0xffe Insigniate
-!setname 0xffc Terram-TBR
+!setname 0xffc Terram # No longer supported, may be removed.
 !setname 0xffb Reguraptor
 !setname 0xffa Raijuteki
-!setname 0xff9 Fortuity-TBR
-!setname 0xff8 Azudian-TBR
-!setname 0xff7 Unrelentede-TBR
+!setname 0xff9 Fortuity # No longer supported, may be removed.
+!setname 0xff8 Azudian # No longer supported, may be removed.
+!setname 0xff7 Unrelentede # No longer supported, may be removed.
 !setname 0xff6 Osignis
 !setname 0xff5 Mereas
-!setname 0xff4 Aspidesa
+!setname 0xff4 Aspidesa # No longer supported, may be removed.
 !setname 0xff3 TelEscaper
-!setname 0xff2 Hannic-TBR
+!setname 0xff2 Hannic # No longer supported, may be removed.
 !setname 0xff1 Shimzu
 !setname 0xff0 Inscriber
 !setname 0xfef Astagraphy
-!setname 0xfee Freezation-TBR
+!setname 0xfee Freezation # No longer supported, may be removed.
 !setname 0xfed Theraformation
 !setname 0xfec Parafalon
 !setname 0xfeb Cyroglyph
 !setname 0xfea Incarntation
-!setname 0xfe9 Transfigure-TBR
+!setname 0xfe9 Transfigure # No longer supported, may be removed.
 !setname 0xfe8 Duplicity
 !setname 0xfe7 net
 !setname 0x1fe7 Contaminet
@@ -41,17 +41,17 @@
 !setname 0x2fe3 Zerunic
 !setname 0xfe2 Ritic
 !setname 0xfe1 Etherune
-!setname 0xfe0 Deprovision-TBR
-!setname 0xfdf Piniovistic-TBR
+!setname 0xfe0 Deprovision # No longer supported, may be removed.
+!setname 0xfdf Piniovistic # No longer supported, may be removed.
 !setname 0xfde Virutali
 !setname 0xfdd Squale
-!setname 0xfdc Celestial Mermaid-TBR
+!setname 0xfdc Celestial Mermaid # No longer supported, may be removed.
 !setname 0xfdb Jittre
 !setname 0xfda IncantLeech
 !setname 0xfd9 Ensnared
 !setname 0xfd8 Primordial
 !setname 0x1fd8 Primordial Beast
-!setname 0xfd7 Luminereid-TBR
+!setname 0xfd7 Luminereid # No longer supported, may be removed.
 !setname 0xfd6 Salamasprite
 !setname 0xfd5 Subshifter
 !setname 0xfd4 Avilia
@@ -61,7 +61,7 @@
 !setname 0xfd0 Toureika
 !setname 0xfcf Catenicorum
 !setname 0xfce Celsi
-!setname 0xfcd Tempusloom
+!setname 0xfcd Tempusloom # May remove archetype.
 !setname 0xfcc Libricon
 !setname 0xfcb ???
 !setname 0xfca Luminara
