--- a/strings.conf
+++ b/strings.conf
@@ -69,4 +69,5 @@
 !setname 0xfc8 Lithoforge
 !setname 0x1fc8 Nuclithoforge
 !setname 0xfc7 Hexlock
-!setname 0xfc6 Hexlock
+!setname 0xfc6 Grimvow
+!setname 0xfc5 Elysiance
